--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,7 +235,38 @@
     margin: 0 auto 30px;
   }
 }
-.titled-productions-list--item-link span {
+.titled-productions-list--item__label {
+  position: absolute;
+  right: 0;
+  top: 6px;
+  text-align: right;
+}
+.titled-productions-list--item__label span {
+  padding: 1px 21px;
+  font-family: 'Open Sans';
+  font-size: 13px;
+  line-height: 14px;
+  color: #fff;
+  border-radius: 10px 0 0 10px;
+}
+.titled-productions-list--item__label span.action {
+  background-color: #c94466;
+}
+.titled-productions-list--item__label span.new {
+  background-color: #619456;
+}
+.titled-productions-list--item__label span.sales {
+  padding-right: 8px;
+  padding-left: 15px;
+  background-color: #c96344;
+}
+.titled-productions-list--item-link {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.titled-productions-list--item-link span.name {
   display: inline-block;
   padding: 8px 0;
   font-size: 17px;
@@ -598,7 +629,7 @@ input.input-field {
 .post--content {
   margin-top: 50px;
   line-height: 24px;
-  font-size: 13px;
+  font-size: 15px;
 }
 .post--content > h2:first-child {
   margin-top: 0;
@@ -620,6 +651,19 @@ input.input-field {
 }
 .post--gallery {
   margin-top: 70px;
+}
+.post--gallery header {
+  margin-bottom: 15px;
+  padding: 5px 0;
+  background-color: black;
+  border-bottom: 4px solid #c0ab7c;
+}
+.post--gallery header h2 {
+  margin: 0;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 400;
+  color: white;
 }
 .post--gallery-items {
   display: flex;
@@ -2535,4 +2579,35 @@ body:not(.body--main-page) .page-header--floating_right {
 /************************************************/
 .title-page {
   margin-bottom: 40px;
+}
+/*************************************************/
+/*************Модалка обратная связь***************/
+/*************************************************/
+.modal-feedback {
+  max-width: 750px;
+  width: 100%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  background-color: #fff;
+  box-sizing: border-box;
+  overflow: visible;
+}
+.modal-feedback .rates-warning--inner {
+  padding-left: 30px;
+}
+.modal-feedback .rates-warning--inner h2 {
+  margin-top: 24px;
+  margin-bottom: 0;
+  color: #333333;
+}
+.modal-feedback .rates-warning--content {
+  padding: 30px;
+  background-color: #fff;
+}
+.modal-feedback .modal-close {
+  top: 25px;
+  right: 32px;
 }
