--- a/assets/less/elements.less
+++ b/assets/less/elements.less
@@ -38,8 +38,43 @@
                 margin: 0 auto 30px;
             }
 
-            &-link {
+            &__label {
+                position: absolute;
+                right: 0;
+                top: 6px;
+                text-align: right;
+
                 span {
+                    padding: 1px 21px;
+                    .ff_open_sans;
+                    font-size: 13px;
+                    line-height: 14px;
+                    color: #fff;
+                    border-radius: 10px 0 0 10px;
+
+                    &.action {
+                        background-color: #c94466;
+                    }
+
+                    &.new {
+                        background-color: #619456;
+                    }
+
+                    &.sales {
+                        padding-right: 8px;
+                        padding-left: 15px;
+                        background-color: #c96344;
+                    }
+                }
+            }
+
+            &-link {
+                position: relative;
+                display: block;
+                width: 100%;
+                height: 100%;
+
+                span.name {
                     display: inline-block;
                     padding: 8px 0;
                     .fs_17;
@@ -465,7 +500,7 @@ input.input-field {
             .mt_50;
             line-height: 24px;
             //.ff_open_sans;
-            .fs_13;
+            .fs_15;
 
             & > h2:first-child {
                 .mt_0;
@@ -488,6 +523,21 @@ input.input-field {
         }
         &gallery {
             .mt_70;
+
+            header {
+                margin-bottom: 15px;
+                padding: 5px 0;
+                background-color: black;
+                border-bottom: 4px solid #c0ab7c;
+
+                h2 {
+                    margin: 0;
+                    text-align: center;
+                    font-size: 22px;
+                    font-weight: 400;
+                    color: white;
+                }
+            }
 
             &-items {
                 display: flex;
